added the annotation for prometheus scraping in packetmanager

--- a/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
@@ -32,3 +32,4 @@ services:
     healthUrl: /commons/v1/packetmanager/actuator/health
     podconfig:
       {{ podconfig.packetmanager.service | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /commons/v1/packetmanager/actuator/prometheus
