templatised the websub ingress yaml
Conflicts:
	deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml

--- a/deployment/sandbox-v2/helm/charts/websub/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/websub/values.template.j2
@@ -3,6 +3,7 @@ services:
   serviceName: {{ versions.services.websub.service.keys()[0] }}
   dockerImage: {{ versions.services.websub.service.values()[0] }}
   servicePort: 80
+  ingress: /websub
   podconfig:
     {{ podconfig.websub.service | to_nice_yaml(indent=4) | indent(4) }}
 
