--- a/deployment/sandbox-v2/helm/charts/pms/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/pms/values.template.j2
@@ -22,6 +22,7 @@ dockerHub:
   keyname: {{ docker.hub.keyname }}
 
 services:
+
   partner:
     serviceName: {{ versions.services.pms.partner.keys()[0] }}
     dockerImage: {{ versions.services.pms.partner.values()[0] }}
@@ -31,6 +32,7 @@ services:
     healthUrl: /v1/partnermanager/actuator/health
     podconfig:
       {{ podconfig.pms.partner | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /partnermanagement/v1/partner/actuator/prometheus
 
   policy:
     serviceName: {{ versions.services.pms.policy.keys()[0] }}
@@ -41,6 +43,7 @@ services:
     healthUrl: /v1/policymanager/actuator/health
     podconfig:
       {{ podconfig.pms.partner | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /partnermanagement/v1/policies/actuator/prometheus
 
   ui:
     serviceName: {{ versions.services.pms.ui.keys()[0] }}
@@ -49,3 +52,4 @@ services:
     servicePort: 80
     apiHost: {{ site.sandbox_public_url }}/v1/
     ingressPath: /pmp-ui
+      {{ podconfig.pms.policy | to_nice_yaml(indent=6) | indent(6) }}
