--- a/deployment/sandbox-v2/helm/charts/pms/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/pms/values.template.j2
@@ -31,6 +31,7 @@ services:
     healthUrl: /partnermanagement/v1/misps/actuator/health
     podconfig:
       {{ podconfig.pms.misp | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /partnermanagement/v1/misps/actuator/prometheus
 
   pm:
     serviceName: {{ versions.services.pms.pm.keys()[0] }} 
@@ -41,6 +42,7 @@ services:
     healthUrl: /partnermanagement/v1/pmpartners/actuator/health
     podconfig:
       {{ podconfig.pms.pm | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /partnermanagement/v1/pmpartners/actuator/prometheus
 
   partner:
     serviceName: {{ versions.services.pms.partner.keys()[0] }} 
@@ -51,6 +53,7 @@ services:
     healthUrl: /partnermanagement/v1/partners/actuator/health
     podconfig:
       {{ podconfig.pms.partner | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /partnermanagement/v1/partner/actuator/prometheus
 
   policy:
     serviceName: {{ versions.services.pms.policy.keys()[0] }} 
@@ -61,3 +64,4 @@ services:
     healthUrl: /partnermanagement/v1/policies/actuator/health
     podconfig:
       {{ podconfig.pms.policy | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /partnermanagement/v1/policies/actuator/prometheus
