added prometheus scrapping for admin, ida, datashare, pms, mock-abis
Conflicts:
	deployment/sandbox-v2/helm/charts/pms/templates/misp-dep.yaml
	deployment/sandbox-v2/helm/charts/pms/templates/pm-dep.yaml
	deployment/sandbox-v2/helm/charts/pms/values.template.j2

--- a/deployment/sandbox-v2/helm/charts/admin/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/admin/values.template.j2
@@ -37,6 +37,7 @@ services:
     healthUrl: /v1/admin/actuator/health
     podconfig:
       {{ podconfig.admin.service | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /v1/admin/actuator/prometheus
 
   ui:
     serviceName: {{ versions.services.admin.ui.keys()[0] }}
