--- a/deployment/sandbox-v2/helm/charts/datashare/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/datashare/values.template.j2
@@ -31,3 +31,4 @@ services:
     healthUrl: /v1/datashare/actuator/health
     podconfig:
       {{ podconfig.datashare.service | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /v1/datashare/actuator/prometheus
