added prometheus scrapping for idrepo print resident

--- a/deployment/sandbox-v2/helm/charts/print/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/print/values.template.j2
@@ -28,3 +28,4 @@ services:
     healthUrl: /v1/print/actuator/health
     podconfig:
       {{ podconfig.print.service | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /v1/print/actuator/prometheus
