--- a/deployment/sandbox-v2/helm/charts/resident/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/resident/values.template.j2
@@ -34,3 +34,4 @@ services:
     healthUrl: /resident/v1/actuator/health
     podconfig: 
       {{ podconfig.resident.service | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /resident/v1/actuator/prometheus
