added prometheus scrapping for idrepo print resident
Conflicts:
	deployment/sandbox-v2/helm/charts/idrepo/templates/bioextractor-dep.yaml
	deployment/sandbox-v2/helm/charts/idrepo/values.template.j2

--- a/deployment/sandbox-v2/helm/charts/resident/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/resident/values.template.j2
@@ -38,3 +38,4 @@ services:
     healthUrl: /resident/v1/actuator/health
     podconfig: 
       {{ podconfig.resident.service | to_nice_yaml(indent=6) | indent(6) }}
+    annotation: /resident/v1/actuator/prometheus
