--- a/deployment/sandbox-v2/helm/charts/kafka/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/kafka/values.template.j2
@@ -21,3 +21,13 @@ zookeeper:
     enabled: true
     storageClass: {{nfs.provisioner}}
     size: {{ kafka_prop.zookeeper_size }}
+   
+livenessProbe:
+  enabled: true
+  initialDelaySeconds: 120
+  timeoutSeconds: 5
+readinessProbe:
+  enabled: true
+  initialDelaySeconds: 120
+  failureThreshold: 6
+  timeoutSeconds: 5
