Corrected parameter values for salt generator job

--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -316,7 +316,7 @@ job:
     serviceName: {{ versions.services.regproc.salt.keys()[0] }}
     dockerImage: {{ versions.services.regproc.salt.values()[0] }}
     table: rid_encrypt_salt
-    schema: regproc
+    schema: regprc
     alias: mosip.regproc.db
     configName: registration-processor
 
