--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -205,6 +205,10 @@ http {
            proxy_pass {{clusters.mz.ingress.base_url}}/registrationprocessor/v1/bio-dedupe/;
         }
 
+        location /registrationprocessor/v1/workflowmanager/ {
+           proxy_pass {{clusters.mz.ingress.base_url}}/registrationprocessor/v1/workflowmanager/;
+        }
+
         location /registrationprocessor/v1/notification/ {
            proxy_pass {{clusters.mz.ingress.base_url}}/registrationprocessor/v1/notification/;
         }
