--- a/deployment/sandbox-v2/helm/charts/reg-client-downloader/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/reg-client-downloader/values.template.j2
@@ -12,7 +12,7 @@ docker:
     servicePort: 80
 
 version: {{ versions.services.registration_client.version }}
-mountPath: "/build_files"  # path inside docker
+mountPath: "/home/mosip/build_files"  # path inside docker
 crypto_key_env: {{ reg_client.crypto_key }}
 bootpwd: {{ reg_client.bootpwd }}
 tpm: "N"
