updated the keycloak image for theme changes

--- a/deployment/sandbox-v2/helm/charts/keycloak/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/keycloak/values.template.j2
@@ -1,6 +1,6 @@
 name: keycloak
-dockerImage: jboss/keycloak
-dockerTag: 9.0.0 
+dockerImage: mosipqa/mosip-keycloak
+dockerTag: develop
 keycloakUser: {{ keycloak.user }}
 keycloakPassword: '' # To be passed directly with helm command
 domain: {{ sandbox_domain_name }}
