--- a/deployment/sandbox-v2/helm/charts/key-migrator/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/key-migrator/values.template.j2
@@ -1,31 +1,27 @@
 component: kernel
 part-of: mosip
 activeProfileEnv: mz
-springConfigLabel: {{ config_repo.version }} 
+springConfigLabel: {{ config_repo.version }}
 configServerUrl: {{ config_server.internal_url }}
-artifactoryUrl: {{ artifactory_url }} 
+artifactoryUrl: {{ artifactory_url }}
 iamAdapterUrl: {{ iam_adapter_url }}
-runtimeDepUrl: {{ runtimeDepUrlpath }}
-cont_user: {{ container_user }}
 exportLogs: enabled  # Let filebeat export the logs
 probe:
   initialDelay: 120  # Seconds
   period: 30 # Seconds
 imagePullPolicy: Always
-isGlowroot: {{ is_glowroot }} 
+isGlowroot: {{ is_glowroot }}
 
 dockerHub:
-  private: {{ docker.hub.private }}  
+  private: {{ docker.hub.private }}
   keyname: {{ docker.hub.keyname }}
 
 services:
-  key-migrator:
-    serviceName: {{ versions.services.kernel.key-migrator.keys()[0] }}
-    dockerImage: {{ versions.services.kernel.key-migrator.values()[0] }}
+  keymigrator:
+    serviceName: {{ versions.services.kernel.keymigrator.keys()[0] }}
+    dockerImage: {{ versions.services.kernel.keymigrator.values()[0] }}
     containerPort: 9096
     servicePort: 80
-    ingressPath: /v1/keymigrator
-    healthUrl: /v1/keymigrator/actuator/health
     hsmClientZipPath: {{ hsm_client_zip_path }}
     podconfig:
       {{ podconfig.kernel.keyMigrator | to_nice_yaml(indent=6) | indent(6) }}
