added liveness probe to the packetmanager service

--- a/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
@@ -14,6 +14,8 @@ serviceAccount: packetmanager
 probe:
   initialDelay: 30  # Seconds
   period: 30 # Seconds
+  initialLivenessDelay: 120
+
 imagePullPolicy: Always
 
 isGlowroot: {{ is_glowroot }} 
