--- a/deployment/sandbox-v2/helm/charts/resident/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/resident/values.template.j2
@@ -28,8 +28,9 @@ services:
     serviceName: {{ versions.services.resident.resident.keys()[0] }} 
     dockerImage: {{ versions.services.resident.resident.values()[0] }}
     dockerTag: 1.0.10
-    containerPort: 8099
-    servicePort: 80
+    ports:
+      containerPort: 8099
+      servicePort: 80
     ingressPath: /resident/v1
     healthUrl: /resident/v1/actuator/health
     podconfig: 
