--- a/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
@@ -23,35 +23,43 @@ services:
   application:
     serviceName: {{ versions.services.prereg.application.keys()[0] }} 
     dockerImage: {{ versions.services.prereg.application.values()[0] }}
-    containerPort: 9090
-    servicePort: 80
+    ports:
+      containerPort: 9090
+      servicePort: 80
     ingressPath: /preregistration/v1
     healthUrl: /preregistration/v1/actuator/health
     podconfig:
       {{ podconfig.prereg.application | to_nice_yaml(indent=6) | indent(6) }}
+    
+
   batch:
     serviceName: {{ versions.services.prereg.batch.keys()[0] }} 
     dockerImage: {{ versions.services.prereg.batch.values()[0] }}
-    containerPort: 9097
-    servicePort: 80
+    ports:
+      containerPort: 9097
+      servicePort: 80
     ingressPath: ""
     #healthUrl: /preregistration/v1/actuator/health # TODO: No actuator?
     podconfig:
       {{ podconfig.prereg.batch | to_nice_yaml(indent=6) | indent(6) }}
+
   booking:
     serviceName: {{ versions.services.prereg.booking.keys()[0] }} 
     dockerImage: {{ versions.services.prereg.booking.values()[0] }}
-    containerPort: 9095
-    servicePort: 80
+    ports:
+      containerPort: 9095
+      servicePort: 80
     ingressPath: /preregistration/v1/appointment
     healthUrl: /preregistration/v1/actuator/health
     podconfig:
       {{ podconfig.prereg.booking | to_nice_yaml(indent=6) | indent(6) }}
+
   datasync:
     serviceName: {{ versions.services.prereg.datasync.keys()[0] }} 
     dockerImage: {{ versions.services.prereg.datasync.values()[0] }}
-    containerPort: 9094
-    servicePort: 80
+    ports:
+      containerPort: 9094
+      servicePort: 80
     ingressPath: /preregistration/v1/sync
     healthUrl: /preregistration/v1/actuator/health
     podconfig:
@@ -59,8 +67,9 @@ services:
   ui:
     serviceName: {{ versions.services.prereg.ui.keys()[0] }} 
     dockerImage: {{ versions.services.prereg.ui.values()[0] }}
-    containerPort: 80
-    servicePort: 80
+    ports:
+      containerPort: 80
+      servicePort: 80
     configName: prereg-ui-config # ConfigMap name
     apiHost: https://{{ sandbox_domain_name }}/
     ingressPath: /pre-registration-ui
