--- a/deployment/sandbox-v2/helm/charts/datashare/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/datashare/values.template.j2
@@ -8,9 +8,11 @@ iamAdapterUrl: {{ iam_adapter_url }}
 exportLogs: enabled  # Let filebeat export the logs
 
 probe:
-  initialDelay: 30  # Seconds
   period: 30 # Seconds
-imagePullPolicy: Always
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
 
 isGlowroot: {{ is_glowroot }} 
 
