--- a/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
@@ -12,8 +12,12 @@ clusterRole: packetmanager-cluster-role
 serviceAccount: packetmanager
 
 probe:
-  initialDelay: 30  # Seconds
   period: 30 # Seconds
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
+
 imagePullPolicy: Always
 
 isGlowroot: {{ is_glowroot }} 
