[PSA-36] updated kubernetes probes in packetmanager module

--- a/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
@@ -12,9 +12,11 @@ clusterRole: packetmanager-cluster-role
 serviceAccount: packetmanager
 
 probe:
-  initialDelay: 30  # Seconds
   period: 30 # Seconds
-  initialLivenessDelay: 120
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
 
 imagePullPolicy: Always
 
