--- a/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
@@ -3,9 +3,14 @@ part-of: mosip
 activeProfileEnv: mz
 springConfigLabel: {{ config_repo.version }} 
 configServerUrl: {{ config_server.internal_url }}
+
 probe:
-  initialDelay: 180  # Seconds
   period: 30 # Seconds
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
+
 ingress:
    namespace: default
 artifactoryUrl: {{ artifactory_url }} 
