[PSA-36] added probes in resident module

--- a/deployment/sandbox-v2/helm/charts/resident/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/resident/values.template.j2
@@ -16,8 +16,11 @@ sitePublicUrl: {{ site.sandbox_public_url }}
 isGlowroot: {{ is_glowroot }} 
 
 probe:
-  initialDelay: 30  # Seconds
   period: 30 # Seconds
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
 
 dockerHub:
   private: {{ docker.hub.private }}  
