--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -7,9 +7,13 @@ storageClass: dm-storage-class  # See sc, pv templates
 exportLogs: enabled  # Let filebeat export the logs
 
 sitePublicUrl: {{ site.sandbox_public_url }}
+
 probe:
-  initialDelay: 180 # Seconds
   period: 30 # Seconds
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
 
 ingress:
    namespace: default
