--- a/deployment/sandbox-v2/helm/charts/ida/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/ida/values.template.j2
@@ -10,9 +10,14 @@ ingress:
    namespace: default
 artifactoryUrl: {{ artifactory_url }} 
 iamAdapterUrl: {{ iam_adapter_url }}
+
 probe:
-  initialDelay: 60  # Seconds
   period: 30 # Seconds
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
+
 imagePullPolicy: Always
 
 sitePublicUrl: {{ site.sandbox_public_url }}
@@ -27,8 +32,9 @@ services:
   auth:
     serviceName: {{ versions.services.ida.auth.keys()[0] }} 
     dockerImage: {{ versions.services.ida.auth.values()[0] }}
-    containerPort: 8090
-    servicePort: 80
+    ports:
+      containerPort: 8090
+      servicePort: 80
     hsmUrl: tcp://softhsm-ida:80   # Should match with softhsm chart service name and port (see, ida.yml and role/softhsm)
     ingressPath: /idauthentication/v1/auth
     healthUrl: /idauthentication/v1/auth/actuator/health
@@ -39,8 +45,9 @@ services:
   internal: 
     serviceName: {{ versions.services.ida.internal.keys()[0] }} 
     dockerImage: {{ versions.services.ida.internal.values()[0] }}
-    containerPort: 8093
-    servicePort: 80
+    ports:
+      containerPort: 8093
+      servicePort: 80
     hsmUrl: tcp://softhsm-ida:80   
     ingressPath: /idauthentication/v1/internal
     healthUrl: /idauthentication/v1/internal/actuator/health
@@ -51,8 +58,9 @@ services:
   kyc: 
     serviceName: {{ versions.services.ida.kyc.keys()[0] }} 
     dockerImage: {{ versions.services.ida.kyc.values()[0] }}
-    containerPort: 8091
-    servicePort: 80
+    ports:
+      containerPort: 8091
+      servicePort: 80
     hsmUrl: tcp://softhsm-ida:80   
     ingressPath: /idauthentication/v1/kyc
     healthUrl: /idauthentication/v1/kyc/actuator/health
@@ -63,8 +71,9 @@ services:
   otp: 
     serviceName: {{ versions.services.ida.otp.keys()[0] }} 
     dockerImage: {{ versions.services.ida.otp.values()[0] }}
-    containerPort: 8092
-    servicePort: 80
+    ports:
+      containerPort: 8092
+      servicePort: 80
     hsmUrl: tcp://softhsm-ida:80   
     ingressPath: /idauthentication/v1/otp
     healthUrl: /idauthentication/v1/otp/actuator/health
