[PSA-36] added probes in idrepo
Conflicts:
	deployment/sandbox-v2/helm/charts/idrepo/templates/cred-req-dep.yaml
	deployment/sandbox-v2/helm/charts/idrepo/templates/cred-service-dep.yaml
	deployment/sandbox-v2/helm/charts/idrepo/templates/identity-dep.yaml
	deployment/sandbox-v2/helm/charts/idrepo/templates/vid-dep.yaml

--- a/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
@@ -13,8 +13,12 @@ iamAdapterUrl: {{ iam_adapter_url }}
 biosdkServiceUrl: {{ biosdk_service_url }}
 
 probe:
-  initialDelay: 60  # Seconds
   period: 30 # Seconds
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
+
 imagePullPolicy: Always
 
 isGlowroot: {{ is_glowroot }} 
@@ -29,8 +33,9 @@ services:
   identity:
     serviceName: {{ versions.services.idrepo.identity.keys()[0] }} 
     dockerImage: {{ versions.services.idrepo.identity.values()[0] }}
-    serviceName: idrepo-identity-service
-    containerPort: 8090
+    ports:
+      serviceName: idrepo-identity-service
+      containerPort: 8090
     servicePort: 80
     ingressPath: /idrepository/v1/identity 
     healthUrl: /idrepository/v1/identity/actuator/health
@@ -40,8 +45,9 @@ services:
   vid: 
     serviceName: {{ versions.services.idrepo.vid.keys()[0] }} 
     dockerImage: {{ versions.services.idrepo.vid.values()[0] }}
-    containerPort: 8091
-    servicePort: 80
+    ports:
+      containerPort: 8091
+      servicePort: 80
     ingressPath: /idrepository/v1/vid
     healthUrl: /idrepository/v1/actuator/health # TODO: Check this url. It does not have /vid
     podconfig:
@@ -50,8 +56,9 @@ services:
   credentialrequest:
     serviceName: {{ versions.services.idrepo.credentialreq.keys()[0] }}
     dockerImage: {{ versions.services.idrepo.credentialreq.values()[0] }}
-    containerPort: 8094
-    servicePort: 80
+    ports:
+      containerPort: 8094
+      servicePort: 80
     ingressPath: /v1/credentialrequest
     healthUrl: /v1/credentialrequest/actuator/health
     podconfig:
@@ -60,8 +67,9 @@ services:
   credentialservice:
     serviceName: {{ versions.services.idrepo.credentialservice.keys()[0] }}
     dockerImage: {{ versions.services.idrepo.credentialservice.values()[0] }}
-    containerPort: 8095
-    servicePort: 80
+    ports:
+      containerPort: 8095
+      servicePort: 80
     ingressPath: /v1/credentialservice
     healthUrl: /v1/credentialservice/actuator/health
     podconfig:
