--- a/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
@@ -13,8 +13,12 @@ iamAdapterUrl: {{ iam_adapter_url }}
 biosdkServiceUrl: {{ biosdk_service_url }}
 
 probe:
-  initialDelay: 60  # Seconds
   period: 30 # Seconds
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
+
 imagePullPolicy: Always
 
 isGlowroot: {{ is_glowroot }} 
