--- a/deployment/sandbox-v2/helm/charts/admin/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/admin/values.template.j2
@@ -8,9 +8,14 @@ exportLogs: enabled  # Let filebeat export the logs
 ingress:
    namespace: default
 artifactoryUrl: {{ artifactory_url }} 
+
 probe:
-  initialDelay: 30  # Seconds
   period: 30 # Seconds
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
+
 imagePullPolicy: Always
 sitePublicUrl: {{ site.sandbox_public_url }}
 iamAdapterUrl: {{ iam_adapter_url }}
