--- a/deployment/sandbox-v2/helm/charts/print/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/print/values.template.j2
@@ -5,9 +5,14 @@ springConfigLabel:  {{ config_repo.version }}
 configServerUrl: {{ config_server.internal_url }}
 artifactoryUrl: {{ artifactory_url }} 
 iamAdapterUrl: {{ iam_adapter_url }}
+
 probe:
-  initialDelay: 30  # Seconds
   period: 30 # Seconds
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
+
 imagePullPolicy: Always
 
 exportLogs: enabled  # Let filebeat export the logs
@@ -22,8 +27,9 @@ services:
   print:
     serviceName: {{ versions.services.print.service.keys()[0] }}
     dockerImage: {{ versions.services.print.service.values()[0] }}
-    containerPort: 8088
-    servicePort: 80
+    ports:
+      containerPort: 8088
+      servicePort: 80
     ingressPath: /v1/print
     healthUrl: /v1/print/actuator/health
     podconfig:
