[PSA-36] updated the kubernetes probes in exernal dependencies
Conflicts:
	deployment/sandbox-v2/helm/charts/artifactory/templates/artifactory-dep.yaml

--- a/deployment/sandbox-v2/helm/charts/activemq/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/activemq/values.template.j2
@@ -34,3 +34,11 @@ mountPath: /data/activemq  # path inside docker
 nfs:
   server: {{ nfs.server }} 
   path: {{ activemq.nfs_path }}
+
+probe:
+  period: 30 # Seconds
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
+
