--- a/deployment/sandbox-v2/helm/charts/clamav/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/clamav/values.template.j2
@@ -12,3 +12,10 @@ services:
 exportLogs: enabled  # Let filebeat export the logs
 
 
+probe:
+  period: 30 # Seconds
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
+
