--- a/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
@@ -16,6 +16,13 @@ sc:
 
 exportLogs: enabled  # Let filebeat export the logs
 
+probe:
+  period: 30 # Seconds
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
+
 resources:
   requests:
     memory: 512Mi 
