--- a/deployment/sandbox-v2/helm/charts/artifactory/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/artifactory/values.template.j2
@@ -1,4 +1,4 @@
-name: artifactory-service
+name: artifactory
 docker:
   service: {{ versions.services.artifactory.service.keys()[0] }}
   image: {{ versions.services.artifactory.service.values()[0] }}
@@ -14,3 +14,11 @@ services:
     podconfig: {{ podconfig.artifactory.service | to_yaml }}
 
 exportLogs: enabled  # Let filebeat export the logs
+
+probe:
+  period: 30 # Seconds
+  timeout: 10
+  livenessPeriod: 30
+  failureThreshold: 30
+  startupPeriod: 10
+
